# CosmicCipher

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE-APACHE.md  LICENSE-MIT.md  Makefile  NOTICE  NOTICE.md  README.md  kex.vp  pre-commit
.github/: dependabot.yaml
.github/workflows/: test.yaml
libary/: Cargo.toml
libary/src/: client.rs  lib.rs
libary/src/post_quantum/: mod.rs
libary/src/post_quantum/key_exchange/: mod.rs  mod_test.rs
libary/src/post_quantum/signature/: mod.rs  mod_test.rs
libary/src/pre_quantum/: mod.rs
libary/src/pre_quantum/key_exchange/: mod.rs  mod_test.rs
libary/src/pre_quantum/key_exchange/algorithm/: mod.rs
libary/src/pre_quantum/signature/: mod.rs  mod_test.rs
libary/src/pre_quantum/signature/algorithm/: mod.rs
libary/src/shared/: mod.rs
libary/src/shared/helpers/: mod.rs
libary/src/shared/interfaces/: mod.rs
libary/src/shared_interfaces/: mod.rs
libary/tests/: compression_test.rs
rest/: Cargo.toml  Makefile
rest/src/: main.rs
scripts/: add_signoff.sh  check_copyright.sh
wasm/: Cargo.toml  Makefile
wasm/src/: crypto.rs  lib.rs  utils.rs
wasm/www/: index.js  package-lock.json  package.json  webpack.config.js
