[package]
name = "libary"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Scarjit/CosmicCipher"

[features]
default = ["serde"]
serde = ["oqs/serde"]

[dependencies]

[dependencies.sha3]
default-features = false
version = "0.10.8"

[dependencies.serde]
version = "1.0.197"
default-features = false
features = ["derive"]

[dependencies.ed25519-dalek]
version = "2.1.1"
default-features = false
features = ["rand_core"]

[dependencies.x25519-dalek]
version = "2.0.1"
default-features = false
features = ["static_secrets", "getrandom"]

[dependencies.rand]
version = "0.8.5"
default-features = false
features = ["alloc", "small_rng", "getrandom"]

[dependencies.oqs]
# Until https://github.com/open-quantum-safe/liboqs-rust/pull/259 is merged, we directly pull from https://github.com/Scarjit/liboqs-rust
git = "https://github.com/Scarjit/liboqs-rust"
default-features = false
features = ["classic_mceliece","ml_dsa", "vendored"]

[dependencies.anyhow]
version = "1.0.82"
default-features = false

[dev-dependencies]

[dev-dependencies.serde_json]
version = "1.0.115"
