[package]
name = "libary"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Scarjit/CosmicCipher"


[dependencies]
chacha20poly1305 = "0.10.1"
ed25519-dalek = "2.1.1"
x25519-dalek = "2.0.1"

[dependencies.sha3]
default-features = false
version = "0.10.8"

[dependencies.serde]
version = "1.0.198"
default-features = false
features = ["derive"]

[dependencies.rand]
version = "0.8.5"
default-features = false
features = ["alloc", "getrandom"]

[dependencies.rand_chacha]
version = "0.3.1"
default-features = false

[dependencies.anyhow]
version = "1.0.82"
default-features = false

[dev-dependencies]

[dev-dependencies.serde_json]
version = "1.0.116"
