[package]
name = "libary"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Scarjit/CosmicCipher"


[dependencies]

[dependencies.chacha20poly1305]
default-features = false
version = "0.10.1"
features = ["alloc", "rand_core"]

[dependencies.ed25519-dalek]
default-features = false
version = "2.1.1"
features = ["alloc", "rand_core", "pkcs8"]

[dependencies.x25519-dalek]
default-features = false
version = "2.0.1"
features = ["getrandom", "alloc", "static_secrets"]

[dependencies.sha3]
default-features = false
version = "0.10.8"

[dependencies.serde]
version = "1.0.198"
default-features = false
features = ["derive"]

[dependencies.rand]
version = "0.8.5"
default-features = false
features = ["alloc", "getrandom"]

[dependencies.rand_chacha]
version = "0.3.1"
default-features = false

[dependencies.anyhow]
version = "1.0.82"
default-features = false

[dependencies.bson]
version = "2.10.0"
default-features = false

[dependencies.argon2]
version = "0.5.3"
default-features = false
features = ["alloc"]

[dependencies.hashbrown]
version = "0.14.5"

[dependencies.lz4_flex]
version = "0.11.3"

[dev-dependencies]

[dev-dependencies.serde_json]
version = "1.0.116"
