[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Scarjit/CosmicCipher"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.libary]
path = "../library"

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[dependencies.wasm-bindgen]
version = "0.2.84"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
